# quinte

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Config.cmake  deps.cmake
code/: CMakeLists.txt  main.cpp
code/Application/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  VulkanApplication.cpp  VulkanApplication.hpp
code/Audio/: AudioEngineEvents.hpp  Base.hpp  Engine.cpp  Engine.hpp  Session.cpp  Session.hpp  Transport.hpp
code/Audio/Backend/: BackendBase.cpp  BackendBase.hpp  RingBuffer.hpp  WASAPI.cpp  WASAPI.hpp
code/Audio/Buffers/: AudioBuffer.cpp  AudioBuffer.hpp  AudioBufferCommon.hpp  AudioBufferView.cpp  AudioBufferView.hpp  Buffer.hpp  BufferView.hpp
code/Audio/Ports/: AudioPort.hpp  Port.cpp  Port.hpp  PortManager.cpp  PortManager.hpp
code/Audio/Sources/: AudioSource.hpp  BufferAudioSource.cpp  BufferAudioSource.hpp  Source.hpp
code/Audio/Tracks/: AudioClip.hpp  Clip.hpp  Fader.hpp  Playlist.cpp  Playlist.hpp  Track.hpp  TrackList.hpp
code/Core/: Base.hpp  Core.hpp  CoreMath.hpp  CoreTypes.hpp  EventBus.hpp  FixedString.hpp  FixedVector.hpp  Hash.hpp  Interface.cpp  Interface.hpp  LockFreeHashTable.hpp  Memory.cpp  Memory.hpp  MemoryPool.cpp  RefCount.hpp  String.hpp  StringBase.hpp  StringSlice.hpp  TempAllocator.cpp  TempAllocator.hpp  Threading.hpp  Unicode.hpp
code/Core/Memory/: LinearAllocator.cpp  LinearAllocator.hpp  Memory.cpp  Memory.hpp  MemoryPool.cpp  MemoryPool.hpp  RefCount.hpp  TempAllocator.cpp  TempAllocator.hpp
code/Core/Platform/Windows/: Memory.cpp  Threading.cpp  Utils.hpp
code/Core/Windows/: Memory.cpp  Threading.cpp  Utils.hpp
code/Graph/: ExecutionGraph.cpp  ExecutionGraph.hpp  ExecutionGraphNode.hpp
code/UI/: Alerts.hpp  Colors.hpp  Icons.hpp  Utils.cpp  Utils.hpp
code/UI/Platform/Windows/: Alerts.cpp
code/UI/Widgets/: Common.cpp  Common.hpp  Track.cpp  Track.hpp
code/UI/Widgets/Tracks/: TrackEditView.cpp  TrackEditView.hpp  TrackMixerView.cpp  TrackMixerView.hpp  TracksCommon.cpp  TracksCommon.hpp
code/UI/Windows/: Alerts.cpp  BaseWindow.hpp  EditWindow.cpp  EditWindow.hpp  WorkArea.cpp  WorkArea.hpp
tests/: CMakeLists.txt  Common.hpp  FixedString.cpp  RefCounter.cpp  String.cpp
